fix: align left content of user card in dashboard

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -76,6 +76,7 @@
 #user {
   justify-content: flex-start;
   min-width: fit-content;
+  align-items: flex-start;
 }
 
 #name {
